Remove JetBrains annotations