@@ -15,7 +15,6 @@ dependencies {
 	api(projects.junitJupiterApi)
 
 	compileOnlyApi(libs.apiguardian)
-	compileOnly(libs.jetbrainsAnnotations)
 
 	testImplementation(projects.junitPlatformLauncher)
 	testImplementation(projects.junitPlatformSuiteEngine)
@@ -33,12 +32,6 @@ dependencies {
 }
 
 tasks {
-	compileModule {
-		options.compilerArgs.addAll(listOf(
-			"--add-modules", "org.jetbrains.annotations",
-			"--add-reads", "org.junit.jupiter.api=org.jetbrains.annotations",
-		))
-	}
 	test {
 		inputs.dir("src/test/resources").withPathSensitivity(RELATIVE)
 		systemProperty("developmentVersion", version)
